tests/baselines/reference/privateInterfaceProperties.errors.txt
tests/cases/compiler/privateInterfaceProperties.ts(4,7): error TS2421: Class 'c1' incorrectly implements interface 'i1':
  Private property 'name' cannot be reimplemented.


==== tests/cases/compiler/privateInterfaceProperties.ts (1 errors) ====
    interface i1 { name:string; }
     
    // should be an error 
    class c1 implements i1 { private name:string; }
          ~~
!!! error TS2421: Class 'c1' incorrectly implements interface 'i1':
!!! error TS2421:   Private property 'name' cannot be reimplemented.
     
    // should be ok 
    class c2 implements i1 { public name:string; }
    
     